1999-07-07  Michael Natterer  <mitschel@cs.tu-berlin.de>

        * app/gdisplay.c (gdisplay_set_menu_sensitivity): don't make menus
        unreachable by forgetting to set them sensitive again.

Wed Jul  7 12:53:54 MEST 1999 Sven Neumann <sven@gimp.org>

	* app/global_edit.c: cosmetic changes

Tue Jul  6 22:05 CST 1999 Seth Burgess <sjburges@gimp.org>

	* app/qmask.h : took out a relic pixmaps.h that broke compilation (oops)

Tue Jul	 6 20:55 CST 1999 Seth Burgess <sjburges@gimp.org>

	* pixmaps/qmasknosel.xpm 
	* pixmaps/qmasksel.xpm: Ugly pixmaps that tigert promised to replace
	
 	* app/channel.[ch]
	* app/channel_cmds.c : made some of the private structures accessible
	  through exported functions to keep things a bit clean
	
	* app/interface.c
	* app/gdisplay.[ch]
	* app/gimpimageP.h
	* app/gimpimage.[ch]
	* app/undo.[ch]: added qmasks
	
	* app/Makefile.am
	* app/qmask.[ch]: added new files for qmask support

	* tools/pdbgen/pdb: changed some channel stuff to keep things a bit
          more private

Wed Jul  7 03:54:54 MEST 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/script-fu/script-fu.c: Fixed typo. 
	We definitely need a pdbgen tool to generate the 
	script-fu enum wrappers....

Wed Jul  7 02:24:22 1999  Tim Janik  <timj@gtk.org>

	* plug-ins/common/csource.c: save RGBA data as string and not seuqences
	of numbers and commas. this reduces the output file size significantly
	(by 50-70%) and reduces compile time memory requirement majorly (down
	to 20% for gcc).

Tue Jul  6 22:26:24 CEST 1999  Marc Lehmann <pcg@goof.com>

	* libgimp/gimpparasite.c: fixed gimp_detach_parasite.

Tue Jul  6 22:16:07 BST 1999 Andy Thomas <alt@gimp.org>

	* ./app/layer.c.orig
	* ./app/lc_dialog.c.orig
	* ./app/paths_dialog.c.orig
	* ./app/pathsP.h.orig
	* ./libgimp/gimpmenu.c.orig
	* ./tools/pdbgen/pdb/paths.pdb.orig
	* ./app/paths_cmds.c
	* ./app/internal_procs.c

	Fixed small LCP menu preview problems. Now works for all